--- a/MA615_final_slides.Rmd
+++ b/MA615_final_slides.Rmd
@@ -29,13 +29,116 @@ load("la_data_review2.RData")
 load("hawa_data_review2.RData")
 ```
 
-## Figure 2.1 (Boston)
+## Overview
+
+Airbnb, which started its service in 2008, was an unconventional accommodation rental service that focused on allowing travelers to live like locals with the concept of renting my home or my room.  
+
+As one of the travel buffs who love to travel, I use Airbnb a lot even more than Hotel services these days. And, I love that I can experience the traveling area as a resident, not as a tourist, through the Airbnb platform.  
+
+## 
+
+Throughout the project, I look for investigating and proving a few research questions, such as "how are the airbnb listings in Boston area diffrent from the Airbnb listings in other regions."  
+
+The data I use for the project is collected from the site 'Inside Airbnb' http://insideairbnb.com/get-the-data.html, which provides more detailed Airbnb data than most of the other opensource Airbnb data websites does, such as Kaggle and Tomslee.  
+For this project, I compare Airbnb listings in Boston with Airbnb listings in three different regions: New York city, Los Angeles and Hawaii.  
+
+# Exploratory Data Analysis
+
+## Figure 1.1 (Boston)
 ```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
 ####################
 max.x.2.1 <- 1000
-
-## Figure 2.1 (Boston)
 # boston listings
+bos_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
+   ggplot(aes(price, fill = room_type)) +
+   geom_histogram(binwidth = 28) +
+   theme_classic() +
+   scale_fill_brewer(palette = "PuBuGn") +
+   scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
+   ggtitle("Figure 1.1 (Boston):\n Distribution of the airbnb listings over price\n within Boston region in 2019") +
+   theme(plot.title = element_text(face="bold", size=12),
+         axis.title.y = element_text(face="bold",  size=14),
+         axis.text.y  = element_text(vjust=0.5, size=7),
+         axis.title.x = element_text(face="bold",  size=14),
+         axis.text.x  = element_text(vjust=0.5, size=7)) +
+   theme(plot.title = element_text(hjust = 0.5))  +
+   labs(fill="Type of Airbnb room") + ylim(0, 600)
+```
+
+rr
+
+## Figure 1.2 (NYC)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
+# new york listings
+ny_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
+   ggplot(aes(price, fill = room_type)) +
+   geom_histogram(binwidth = 28) +
+   theme_classic() +
+   scale_fill_brewer(palette = "PuBuGn") +
+   scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
+   scale_y_continuous(name="Count")+
+   ggtitle("Figure 1.2 (NYC):\n Distribution of the airbnb listings over price\n within New York city region in 2019") +
+   theme(plot.title = element_text(face="bold", size=12),
+         axis.title.y = element_text(face="bold",  size=14),
+         axis.text.y  = element_text(vjust=0.5, size=7),
+         axis.title.x = element_text(face="bold",  size=14),
+         axis.text.x  = element_text(vjust=0.5, size=7)) +
+   theme(plot.title = element_text(hjust = 0.5))  +
+   labs(fill="Type of Airbnb room") + ylim(0, 600)
+```
+
+rrr
+
+## Figure 1.3 (LA)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
+# los angeles listings
+la_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
+   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
+   ggplot(aes(price, fill = room_type)) +
+   geom_histogram(binwidth = 28) +
+   theme_classic() +
+   scale_fill_brewer(palette = "PuBuGn") +
+   scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
+   scale_y_continuous(name="Count")+
+   ggtitle("Figure 1.3 (LA):\n Distribution of the airbnb listings over price\n within Los Angeles region in 2019") +
+   theme(plot.title = element_text(face="bold", size=12),
+         axis.title.y = element_text(face="bold",  size=14),
+         axis.text.y  = element_text(vjust=0.5, size=7),
+         axis.title.x = element_text(face="bold",  size=14),
+         axis.text.x  = element_text(vjust=0.5, size=7)) +
+   theme(plot.title = element_text(hjust = 0.5))  +
+   labs(fill="Type of Airbnb room") + ylim(0, 600)
+```
+
+rrrrr
+
+## Figure 1.4 (Hawaii)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
+# hawaii listings
+hawa_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
+   ggplot(aes(price, fill = room_type)) +
+   geom_histogram(binwidth = 28) +
+   theme_classic() +
+   scale_fill_brewer(palette = "PuBuGn") +
+   scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
+   scale_y_continuous(name="Count")+
+   ggtitle("Figure 1.4 (Hawaii):\n Distribution of the airbnb listings over price\n within Hawaii region in 2019") +
+   theme(plot.title = element_text(face="bold", size=12),
+         axis.title.y = element_text(face="bold",  size=14),
+         axis.text.y  = element_text(vjust=0.5, size=7),
+         axis.title.x = element_text(face="bold",  size=14),
+         axis.text.x  = element_text(vjust=0.5, size=7)) +
+   theme(plot.title = element_text(hjust = 0.5))  +
+   labs(fill="Type of Airbnb room") + ylim(0, 600)
+```
+
+rrrrrrr
+
+## Figure 1.5 (combined)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=8, fig.height=3}
 f1.bos <- bos_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
    ggplot(aes(price, fill = room_type)) +
@@ -44,8 +147,8 @@ f1.bos <- bos_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(
    scale_fill_brewer(palette = "PuBuGn") +
    scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
    scale_y_continuous(name="Count")+
-   ggtitle("Figure 2.1.(Boston):\n Distribution of the airbnb listings over price\n within Boston region in 2019") +
-   theme(plot.title = element_text(face="bold", size=12),
+   ggtitle("Figure 1.1 (Boston):\n Distribution of the airbnb listings over price\n within Boston region in 2019") +
+   theme(plot.title = element_text(face="bold", size=10),
          axis.title.y = element_text(face="bold",  size=14),
          axis.text.y  = element_text(vjust=0.5, size=7),
          axis.title.x = element_text(face="bold",  size=14),
@@ -53,14 +156,6 @@ f1.bos <- bos_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(
    theme(plot.title = element_text(hjust = 0.5))  +
    labs(fill="Type of Airbnb room") + ylim(0, 600)
 
-f1.bos
-```
-
-
-## Figure 2.1 (NYC)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
-## Figure 2.1 (New York city)
-# new york listings
 f1.ny <- ny_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
    ggplot(aes(price, fill = room_type)) +
@@ -69,8 +164,8 @@ f1.ny <- ny_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!i
    scale_fill_brewer(palette = "PuBuGn") +
    scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
    scale_y_continuous(name="Count")+
-   ggtitle("Figure 2.1.(NYC):\n Distribution of the airbnb listings over price\n within New York city region in 2019") +
-   theme(plot.title = element_text(face="bold", size=12),
+   ggtitle("Figure 1.2 (NYC):\n Distribution of the airbnb listings over price\n within New York city region in 2019") +
+   theme(plot.title = element_text(face="bold", size=10),
          axis.title.y = element_text(face="bold",  size=14),
          axis.text.y  = element_text(vjust=0.5, size=7),
          axis.title.x = element_text(face="bold",  size=14),
@@ -78,13 +173,6 @@ f1.ny <- ny_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!i
    theme(plot.title = element_text(hjust = 0.5))  +
    labs(fill="Type of Airbnb room") + ylim(0, 600)
 
-f1.ny
-```
-
-## Figure 2.1 (LA)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
-## Figure 2.1 (LA)
-# los angeles listings
 f1.la <- la_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
    filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
    ggplot(aes(price, fill = room_type)) +
@@ -93,21 +181,15 @@ f1.la <- la_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!i
    scale_fill_brewer(palette = "PuBuGn") +
    scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
    scale_y_continuous(name="Count")+
-   ggtitle("Figure 2.1.(LA):\n Distribution of the airbnb listings over price\n within Los Angeles region in 2019") +
-   theme(plot.title = element_text(face="bold", size=12),
+   ggtitle("Figure 1.3 (LA):\n Distribution of the airbnb listings over price\n within Los Angeles region in 2019") +
+   theme(plot.title = element_text(face="bold", size=10),
          axis.title.y = element_text(face="bold",  size=14),
          axis.text.y  = element_text(vjust=0.5, size=7),
          axis.title.x = element_text(face="bold",  size=14),
          axis.text.x  = element_text(vjust=0.5, size=7)) +
    theme(plot.title = element_text(hjust = 0.5))  +
    labs(fill="Type of Airbnb room") + ylim(0, 600)
-f1.la
-```
 
-## Figure 2.1 (Hawaii)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
-## Figure 2.1 (Hawaii)
-# hawaii listings
 f1.hawa <- hawa_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>% 
    ggplot(aes(price, fill = room_type)) +
@@ -116,25 +198,78 @@ f1.hawa <- hawa_list %>% dplyr::filter(price > 0 & price <= max.x.2.1) %>% filte
    scale_fill_brewer(palette = "PuBuGn") +
    scale_x_continuous(name ="Price per night in $", breaks = seq(0, max.x.2.1, by = 100)) +
    scale_y_continuous(name="Count")+
-   ggtitle("Figure 2.1.(Hawaii):\n Distribution of the airbnb listings over price\n within Hawaii region in 2019") +
-   theme(plot.title = element_text(face="bold", size=12),
+   ggtitle("Figure 1.4 (Hawaii):\n Distribution of the airbnb listings over price\n within Hawaii region in 2019") +
+   theme(plot.title = element_text(face="bold", size=10),
          axis.title.y = element_text(face="bold",  size=14),
          axis.text.y  = element_text(vjust=0.5, size=7),
          axis.title.x = element_text(face="bold",  size=14),
          axis.text.x  = element_text(vjust=0.5, size=7)) +
    theme(plot.title = element_text(hjust = 0.5))  +
    labs(fill="Type of Airbnb room") + ylim(0, 600)
-f1.hawa
-```
 
-## Figure 2.1 combined
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=3}
-## Figure 2.1 combined
 gridExtra::grid.arrange(f1.bos, f1.ny, f1.la, f1.hawa, nrow = 2)
 ```
 
-## Figure 2.2 (Boston)
+rrrrrrr
+
+## Figure 2.1 (Boston)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=4}
+bos_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
+  filter(!is.na(price)) %>%
+  filter(!is.na(number_of_reviews)) %>%
+  ggplot() +
+  aes(y = number_of_reviews, x = log(price)) +
+  geom_point(size = 2L) +
+  theme_classic() +
+  ggtitle("Figure 2.1 (Boston):\n Number of reviews for the listings over log value of the price\n within Boston region in 2019") +
+  ylim(0, 700) + xlim(0,15)
+```
+
+## Figure 2.2 (New York city)
 ```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+ny_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
+  filter(!is.na(price)) %>%
+  filter(!is.na(number_of_reviews)) %>%
+  ggplot() +
+  aes(y = number_of_reviews, x = log(price)) +
+  geom_point(size = 2L) +
+  theme_classic() +
+  ggtitle("Figure 2.2 (NYC):\n Number of reviews for the listings over log value of the price\n within New York city region in 2019") +
+  ylim(0, 700) + xlim(0,15)
+```
+
+## Figure 2.3 (Los Angeles)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=4}
+la_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
+  filter(!is.na(price)) %>%
+  filter(!is.na(number_of_reviews)) %>%
+  ggplot() +
+  aes(y = number_of_reviews, x = log(price)) +
+  geom_point(size = 2L) +
+  theme_classic() +
+  ggtitle("Figure 2.3 (LA):\n Number of reviews for the listings over log value of the price\n within Los Angeles region in 2019") +
+  ylim(0, 700) + xlim(0,15)
+```
+
+## Figure 2.4 (Hawaii)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=4}
+hawa_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
+  filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
+  filter(!is.na(price)) %>%
+  filter(!is.na(number_of_reviews)) %>%
+  ggplot() +
+  aes(y = number_of_reviews, x = log(price)) +
+  geom_point(size = 2L) +
+  theme_classic() +
+  ggtitle("Figure 2.4 (Hawaii):\n Number of reviews for the listings over log value of the price\n within Hawaii region in 2019") +
+  ylim(0, 700) + xlim(0,15)
+```
+
+## Figure 2.5 (combined)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=4}
 f2.bos <- bos_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
   filter(!is.na(price)) %>%
@@ -143,14 +278,9 @@ f2.bos <- bos_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   aes(y = number_of_reviews, x = log(price)) +
   geom_point(size = 2L) +
   theme_classic() +
-  ggtitle("Figure 2.2.(Boston):\n Number of reviews for the listings over log value of the price\n within Boston region in 2019") +
-  ylim(0, 700) + xlim(0,15)
+  ggtitle("Figure 2.1 (Boston):\n Number of reviews for the listings\n over log value of the price\n within Boston region in 2019") +
+  ylim(0, 800) + xlim(0,15)
 
-f2.bos
-```
-
-## Figure 2.2 (New York city)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
 f2.ny <- ny_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
   filter(!is.na(price)) %>%
@@ -159,13 +289,9 @@ f2.ny <- ny_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   aes(y = number_of_reviews, x = log(price)) +
   geom_point(size = 2L) +
   theme_classic() +
-  ggtitle("Figure 2.2.(NYC):\n Number of reviews for the listings over log value of the price\n within New York city region in 2019") +
-  ylim(0, 700) + xlim(0,15)
-f2.ny
-```
+  ggtitle("Figure 2.2 (NYC):\n Number of reviews for the listings\n over log value of the price\n within New York city region in 2019") +
+  ylim(0, 800) + xlim(0,15)
 
-## Figure 2.2 (Los Angeles)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
 f2.la <- la_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
   filter(!is.na(price)) %>%
@@ -174,13 +300,9 @@ f2.la <- la_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   aes(y = number_of_reviews, x = log(price)) +
   geom_point(size = 2L) +
   theme_classic() +
-  ggtitle("Figure 2.2.(LA):\n Number of reviews for the listings over log value of the price\n within Los Angeles region in 2019") +
-  ylim(0, 700) + xlim(0,15)
-f2.la
-```
+  ggtitle("Figure 2.3 (LA):\n Number of reviews for the listings\n over log value of the price\n within Los Angeles region in 2019") +
+  ylim(0, 800) + xlim(0,15)
 
-## Figure 2.2 (Hawaii)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
 f2.hawa <- hawa_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   filter(room_type %in% c("Private room", "Entire home/apt","Shared room")) %>%
   filter(!is.na(price)) %>%
@@ -189,52 +311,245 @@ f2.hawa <- hawa_list %>% dplyr::filter(price > 0) %>% filter(!is.na(price)) %>%
   aes(y = number_of_reviews, x = log(price)) +
   geom_point(size = 2L) +
   theme_classic() +
-  ggtitle("Figure 2.2.(Hawaii):\n Number of reviews for the listings over log value of the price\n within Hawaii region in 2019") +
-  ylim(0, 700) + xlim(0,15)
-f2.hawa
-```
+  ggtitle("Figure 2.4 (Hawaii):\n Number of reviews for the listings\n over log value of the price\n within Hawaii region in 2019") +
+  ylim(0, 800) + xlim(0,15)
 
-## Figure 2.2 (combined)
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
 gridExtra::grid.arrange(f2.bos, f2.ny, f2.la, f2.hawa, nrow = 2)
 ```
+## Figure 2.5 (combined)
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+-For all of the cities, the price with the most number of reviews is approximately $exp(5)=148.4132$.  
 
+-Therefore, the most popular Airbnb listings are roughly around \$148.41 per day in all four cities.
+
+## Most crowded neighborhoods with Airbnb Listings
+
+- Check which neighborhood has the most number of Airbnb listings is Boston, New York, Los Angeles, and Hawaii.
+
+- Create tables and plots to better check the data.
+
+## Neighborhoods with the most number of Airbnb listings (Boston)
+```{r echo=FALSE, fig.height=2, fig.width=4, message=FALSE, warning=FALSE}
+kable(bos_list %>% group_by(neighbourhood) %>% count() %>%  select(Neighborhood = neighbourhood, Count = n) %>% filter(Count >250))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
-
+## Neighborhoods with the most number of Airbnb listings (Hawaii)
+```{r echo=FALSE, fig.height=2, fig.width=4, message=FALSE, warning=FALSE}
+kable(hawa_list %>% group_by(neighbourhood) %>% count() %>%  select(Neighborhood = neighbourhood, Count = n) %>% filter(Count >1500))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
-
+## Neighborhoods with the most number of Airbnb listings (New York)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
+kable(ny_list %>% group_by(neighbourhood) %>% count() %>%  select(Neighborhood = neighbourhood, Count = n) %>% filter(Count >2000))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
-
+## Neighborhoods with the most number of Airbnb listings (Los Angeles)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
+kable(la_list %>% group_by(neighbourhood) %>% count() %>%  select(Neighborhood = neighbourhood, Count = n) %>% filter(Count >1000))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+## Figure 3 | Number of Airbnb listings (BOS, NYC, LA, HAWA)
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+#Set Maximum price
+max.x <- 10000
+# Organize the data in an order for plotting.
+  bosTable <- within(bos_list, neighbourhood <- factor(neighbourhood, levels=names(sort(table(neighbourhood), decreasing=TRUE))))
+# Draw plot
+  f3.bos <- bosTable %>% dplyr::filter(price > 0 & price <= max.x) %>%
+   ggplot() +
+   aes(x = neighbourhood) +
+   geom_bar(fill = "#758bd1") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=9),
+         axis.text.x = element_text(face="bold",size=6, angle=45),
+         axis.text.y = element_text(face="bold", color="#993333",size=10, angle=1),
+         axis.title.x = element_text(size=8),
+         axis.title.y = element_text(size=8)) +
+    labs(x = "Neighbourhoods in Boston area",
+         y = "Number of Airbnb listings",
+         title = "Figure 2.3(Bos): Number of listings over the neighborhoods\n in Boston")
 
+#----------------------------------------------------------------------------------------------------------------------
+  laTable <- within(la_list, neighbourhood <- factor(neighbourhood, levels=names(sort(table(neighbourhood), decreasing=TRUE))))
+
+  f3.la <- laTable %>% dplyr::filter(price > 0 & price <= max.x) %>% dplyr::filter(!is.na(neighbourhood)) %>%
+   ggplot() +
+   aes(x = neighbourhood) +
+   geom_bar(fill = "#758bd1") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=9),
+         axis.text.x = element_text(face="bold",size=2, angle=80),
+         axis.text.y = element_text(face="bold", color="#993333",size=10, angle=1),
+         axis.title.x = element_text(size=8),
+         axis.title.y = element_text(size=8)) +
+    labs(x = "Neighbourhoods in LA area",
+         y = "Number of Airbnb listings",
+         title = "Figure 2.3(LA): Number of listings over the neighborhoods\n in Los Angeles")
+#---------------------------------------------------------------------------------------------------------------------- 
+  nyTable <- within(ny_list, neighbourhood <- factor(neighbourhood, levels=names(sort(table(neighbourhood),decreasing=TRUE))))
+  
+  f3.ny <- nyTable %>% dplyr::filter(price > 0 & price <= max.x) %>%
+   ggplot() +
+   aes(x = neighbourhood) +
+   geom_bar(fill = "#758bd1") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=9),
+         axis.text.x = element_text(face="bold",size=2, angle=80),
+         axis.text.y = element_text(face="bold", color="#993333",size=10, angle=1),
+         axis.title.x = element_text(size=8),
+         axis.title.y = element_text(size=8)) +
+    labs(x = "Neighbourhoods in NY area",
+         y = "Number of Airbnb listings",
+         title = "Figure 2.3(NYC): Number of listings over the neighborhoods\n in New York")
+#---------------------------------------------------------------------------------------------------------------------- 
+  hawaTable <- within(hawa_list, neighbourhood <- factor(neighbourhood, levels=names(sort(table(neighbourhood),decreasing=TRUE))))
+  
+  f3.hawa <- hawaTable %>% dplyr::filter(price > 0 & price <= max.x) %>%
+   ggplot() +
+   aes(x = neighbourhood) +
+   geom_bar(fill = "#758bd1") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=9),
+         axis.text.x = element_text(face="bold",size=6, angle=45),
+         axis.text.y = element_text(face="bold", color="#993333",size=10, angle=1),
+         axis.title.x = element_text(size=8),
+         axis.title.y = element_text(size=8)) +
+    labs(x = "Neighbourhoods in Hawaii area",
+         y = "Number of Airbnb listings",
+         title = "Figure 2.3(Hawa): Number of listings over the neighborhoods\n in Hawaii")
+#----------------------------------------------------------------------------------------------------------------------
+
+ gridExtra::grid.arrange(f3.bos, f3.hawa, f3.la, f3.ny, nrow = 2)
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+## Figure 3 | Number of Airbnb listings (BOS, NYC, LA, HAWA)
 
+- From the plots, I can see how the Airbnb listings are distriubted over the neighbourhoods in Boston, New York, Los Angeles, and Hawaii.
+
+- For Boston, the most of the airbnb listings are crowded in Dorchester, Downtown and South End. Also, Primary Urban Center in Hawaii has the most number of Airbnb listings. 
+
+## Figure 4 | Number of Airbnb reviews over the neighborhoods
+
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+#Set Maximum price
+max.x <- 10000
+
+ f4.bos <- bos_list %>% dplyr::filter(price > 0 & price <= max.x) %>% dplyr::filter(!is.na(number_of_reviews)) %>%
+   ggplot() +
+ aes(x = neighbourhood, weight = number_of_reviews) +
+   geom_bar(fill = "#0c4c8a") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=8),
+         axis.text.x = element_text(face="bold", size=6, angle=45),
+         axis.text.y = element_text(face="bold", size=9, angle=1),
+         axis.title.x = element_text(size=5),
+         axis.title.y = element_text(size=5)) +
+   labs(x = "Neighbourhoods in Boston",
+         y = "Number of Airbnb reviews",
+         title = "Figure 4: Total number of reviews for the listings over the neiborhoods in Boston")
+#----------------------------------------------------------------------------------------------------------------------
+ f4.la <- la_list %>% dplyr::filter(price > 0 & price <= max.x) %>% dplyr::filter(!is.na(number_of_reviews)) %>%
+   ggplot() +
+ aes(x = neighbourhood, weight = number_of_reviews) +
+   geom_bar(fill = "#0c4c8a") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=8),
+         axis.text.x = element_text(face="bold", size=2, angle=45),
+         axis.text.y = element_text(face="bold", size=9, angle=1),
+         axis.title.x = element_text(size=5),
+         axis.title.y = element_text(size=5)) +
+    labs(x = "Neighbourhoods in LA",
+         y = "Number of Airbnb reviews",
+         title = "Figure 4: Total number of reviews for the listings over the neiborhoods in LA")
+#---------------------------------------------------------------------------------------------------------------------- 
+  f4.ny <- ny_list %>% dplyr::filter(price > 0 & price <= max.x) %>% dplyr::filter(!is.na(number_of_reviews)) %>%
+   ggplot() +
+ aes(x = neighbourhood, weight = number_of_reviews) +
+   geom_bar(fill = "#0c4c8a") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=8),
+         axis.text.x = element_text(face="bold", size=2, angle=45),
+         axis.text.y = element_text(face="bold", size=9, angle=1),
+         axis.title.x = element_text(size=5),
+         axis.title.y = element_text(size=5)) +
+    labs(x = "Neighbourhoods in NYC",
+         y = "Number of Airbnb reviews",
+         title = "Figure 4: Total number of reviews for the listings over the neiborhoods in NYC")
+#---------------------------------------------------------------------------------------------------------------------- 
+  f4.hawa <- hawa_list %>% dplyr::filter(price > 0 & price <= max.x) %>% dplyr::filter(!is.na(number_of_reviews)) %>%
+   ggplot() +
+ aes(x = neighbourhood, weight = number_of_reviews) +
+   geom_bar(fill = "#0c4c8a") +
+   theme_classic() +
+   theme(plot.title = element_text(face="bold", size=8),
+         axis.text.x = element_text(face="bold", size=6, angle=45),
+         axis.text.y = element_text(face="bold", size=9, angle=1),
+         axis.title.x = element_text(size=5),
+         axis.title.y = element_text(size=5)) +
+    labs(x = "Neighbourhoods in Hawaii",
+         y = "Number of Airbnb reviews",
+         title = "Figure 4: Total number of reviews for the listings over the neiborhoods in Hawaii")
+#----------------------------------------------------------------------------------------------------------------------
+
+ gridExtra::grid.arrange(f4.bos, f4.hawa, f4.ny, f4.la, nrow = 2)
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+## Figure 4 | Number of Airbnb reviews over the neighborhoods
+_d_
 
+# Text Analysis
+
+## Figure 5.1 Wordcloud | the overall Airbnb reviews in Boston
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+wordfreq_bos = tibble(bos_review2$comments) %>%
+  rename(comments=`bos_review2$comments`) %>%
+  unnest_tokens(word, comments) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
+
+wordcloud(wordfreq_bos$word, freq = wordfreq_bos$n, scale=c(3, 0.9), max.words = 100,
+          rot.per = 0.25, colors = pal2, random.order=FALSE, vfont=c("serif", "plain"))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+## Figure 5.2 Wordcloud | the overall Airbnb reviews in New York City
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+wordfreq_ny = tibble(ny_review2$comments) %>%
+  rename(comments=`ny_review2$comments`) %>%
+  unnest_tokens(word, comments) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
 
+wordcloud(wordfreq_ny$word, freq = wordfreq_ny$n, scale=c(3, 0.9), max.words = 100,
+          rot.per = 0.25, colors = pal2, random.order=FALSE, vfont=c("serif", "plain"))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
+## Figure 5.3 Wordcloud | the overall Airbnb reviews in Los Angeles
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+wordfreq_la = tibble(la_review2$comments) %>%
+  rename(comments=`la_review2$comments`) %>%
+  unnest_tokens(word, comments) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
 
+wordcloud(wordfreq_la$word, freq = wordfreq_la$n, scale=c(3, 0.9), max.words = 100,
+          rot.per = 0.25, colors = pal2, random.order=FALSE, vfont=c("serif", "plain"))
 ```
 
-```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=7}
-
+## Figure 5.4 Wordcloud | the overall Airbnb reviews in Hawaii
+```{r echo=FALSE,message=FALSE, warning=FALSE, fig.width=7, fig.height=5}
+wordfreq_hawa = tibble(hawa_review2$comments) %>%
+  rename(comments=`hawa_review2$comments`) %>%
+  unnest_tokens(word, comments) %>%
+  anti_join(stop_words) %>%
+  count(word, sort = TRUE)
+wordcloud(wordfreq_hawa$word, freq = wordfreq_hawa$n, scale=c(3, 0.9), max.words = 100,
+          rot.per = 0.25, colors = pal2, random.order=FALSE, vfont=c("serif", "plain"))
 ```
+
+# Mapping
+
+## Mapping with shiny
+
+- The interactive map for Airbnb listings in Boston is included in the shiny app.
+
+
